select activity fix

--- a/src/views/selected.html
+++ b/src/views/selected.html
@@ -95,17 +95,13 @@
                         <p> Week n° </p>
                     </div>
                     <div id="number">
-                        <tbody id="numweek">
-
-                        </tbody>
+                        <p id="numWeek"></p>
                     </div>
                      <div id="activity">
                         <p>Activity to assign</p>
                     </div>
                     <div id="name">
-                        <tbody id="activityname">
-
-                        </tbody>
+                        <p id="activityName"></p>
                     </div>
                     <a href="updateactivity.html"><input type="button" value="update" name="update" style="margin: 10px; width: 100px; height: 50px;"> </a>
                     <input type="button" value="forward" name="forward" style="margin: 10px; width: 100px;
