--- a/src/views/addactivity.html
+++ b/src/views/addactivity.html
@@ -113,6 +113,7 @@
               <br>
               <p> 
                 <label for="interruption">
+                    <p>
                   Interruptible Activity: 
                   <input type="radio" name="yes_no" checked>Yes</input>
                   <input type="radio" name="yes_no">No</input>
@@ -184,4 +185,15 @@
           <h2>Team 5</h2>
         </div>  
     </body>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../controllers/loader.js"></script>
+
+    <script type="application/javascript">
+        $(document).ready(fillFields());
+    </script>
+
 </html>
