--- a/src/views/updateactivity.html
+++ b/src/views/updateactivity.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    	<title> Update Activity </title>
-    	<meta charset="utf-8"/>
-    	<meta name="author" content="Team 5"/>
-    	<meta name="description" content="Web application for maintenance activies."/>
-    	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+      <title> Update Activity </title>
+      <meta charset="utf-8"/>
+      <meta name="author" content="Team 5"/>
+      <meta name="description" content="Web application for maintenance activies."/>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
         <style>
@@ -41,88 +41,63 @@
             <form method="post" name="addsite" >
             <fieldset>
               <legend><h2>Update Activity</h2></legend>
-             <p> 
-                <label for="id">
-                  Activity ID: <input type="text" name="id" required/>
-                </label>
-              </p>
-              <br>
               <fieldset>
               <p> 
-                <label for="site">
-                  Site: <select name="site">
-                    <option value="site1">Site one</option>
-                    <option value="site2">Site two</option>
-                    <option value="site3">Site three</option>
+                <template id="#sites-row-template">
+                	<option value="{Branch}">{Branch}</option>
+                	<option value="{Department}">{Department}</option>
+                </template>
+                  <label for="sites-row">
+                  	Factory: <select name="Factory" id="sites-rows">
                   </select>
-                </label>
-              </p>
-              <br>
-              <p> 
-                <label for="factory">
-                  Factory: <select id="factory" name="factory">
-                    <option value="factory1">Factory one</option>
-                    <option value="factory2">Factory two</option>
-                    <option value="factory3">Factory three</option>
+                  </label>
+                  <label for="sites-row">
+                  Area: <select name="area" id="sites-rows">
                   </select>
-                </label>
-              </p>
-              <br>
-              <p> 
-                <label for="area">
-                  Area: <select name="area">
-                    <option value="area1">Area one</option>
-                    <option value="area2">Area two</option>
-                    <option value="area3">Area three</option>
-                  </select>
-                </label>
+                  </label>
               </p>
               </fieldset>
               <br>
               <p> 
-                <label for="type">
-                  Type: <select name="type">
-                    <option value="type1">Type one</option>
-                    <option value="type1">Type two</option>
-                    <option value="type1">Type three</option>
+                <template id="typology-row-template"><option value="{Description}">{Description}</option></template>
+                  <label for="typology-rows">
+                  	Type: <select name="type" id="typology-rows">
                   </select>
-                </label>
+                  </label>
               </p>
               <br>
               <p> 
                 <label for="description">
-                  Description: <textarea></textarea>
+                  Description: <textarea id="description"></textarea>
                 </label>
               </p>
               <br>
               <p> 
                 <label for="time">
-                  Estimated Intervention Time: <input type="text" name="time" required/>
+                  Estimated Intervention Time: <input placeholder="hh:mm:ss"id="estimatedtime" type="text" name="time" required/>
                 </label>
               </p>
               <br>
               <p> 
-                <label for="material">
-                  Materials:  <select name="material" multiple>
-                    <option value="material1">Material one</option>
-                    <option value="material2">Material two</option>
-                    <option value="material3">Material three</option>
+                <template id="materials-row-template"><option value="{Material}">{Material}</option></template>
+                  <label for="materials-rows">
+                  	Material: <select multiple name="type" id="materials-rows">
                   </select>
-                </label>
+                  </label>
               </p>
               <br>
               <p> 
                 <label for="interruption">
                   Interruptible Activity: 
-                  <input type="radio" name="yes_no" checked>Yes</input>
-                  <input type="radio" name="yes_no">No</input>
+                  <input type="radio" id="interruptible" name="yes_no" checked>Yes</input>
+                  <input type="radio" id="interruptible" name="yes_no">No</input>
                   </p>
                 </label>
               </p>
               <br>
               <p> 
                 <label for="type">
-                  Week: <select name="week">
+                  Week: <select name="week" id="week">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -179,9 +154,29 @@
                 </label>
               </p>
               <br>
+            </fieldset>
+             <p>
+                <button onclick="updateActivity()">Update</button>
+             </p>
+          </form>    
         </div>
         <div class="footer">
           <h2>Team 5</h2>
         </div>  
     </body>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../controllers/loader.js"></script>
+    <script type="text/javascript" src="../controllers/updater.js"></script>
+    
+    <script type="application/javascript">
+      $(document).ready(function(){
+      	 loadMaterials();
+        loadSites();
+        loadTypology();
+      });
+    </script>
+
 </html>
