--- a/src/views/typology.html
+++ b/src/views/typology.html
@@ -5,9 +5,12 @@
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
-    	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
       <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
         <style>
             a{
               text-decoration: none;
@@ -16,7 +19,14 @@
             a:visited{
               color: black;
             }
-
+            .btn{
+              background-color: #3bb0bb;
+              border-color:white; 
+            }
+            .row{
+                margin-left: 0px; 
+                margin-right: 0px;
+            }
         </style>    
     </head>
     <body>
@@ -46,19 +56,21 @@
                 <tr>
                   <td>{Description}</td>
                   <td style="text-align:center;">
-                    <a href="updatetypology.html" class="btn btn-primary" onclick="passId()">Edit</a>
-                   </td>
+                    <a href="updatetypology.html" onclick="passId();" class="btn btn-success btn-lg">
+                      <span class="glyphicon glyphicon-edit"></span>  
+                    </a>
+                  </td>
                 </tr>
               </template>
               </thead>
               <tbody id="typology-rows">
 
               </tbody>
-
-              <tr>
-                <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="addtypology.html">+ Add</a></b></td>
-              </tr>
             </table>
+            <br>
+            <a href="addtypology.html" class="btn btn-info btn-lg">
+                <span class="glyphicon glyphicon-plus-sign"></span> Add
+            </a>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
