fixed css & html elements

--- a/src/views/plannerview.html
+++ b/src/views/plannerview.html
@@ -16,17 +16,6 @@
             a:visited{
               color: black;
             }
-            textarea {
-              width: 100%;
-              height: 150px;
-              padding: 12px 20px;
-              box-sizing: border-box;
-              border: 2px solid #ccc;
-              border-radius: 4px;
-              background-color: #f8f8f8;
-              font-size: 16px;
-              resize: none;
-            }
         </style> 
     </head>
     <body>
@@ -51,14 +40,14 @@
             <td><a href="plannedactivities.html">Planned Activities</a></td>
           </tr>
           <tr>
-            <td><a href="unplannedactivities.html">Un-Planned Activities</a></td>
+            <td><a href="#">Un-Planned Activities</a></td>
           </tr>
           <tr>
-            <td><a href="extra.html">Extra Activities</a></td>
+            <td><a href="#">Extra Activities</a></td>
           </tr>
         </table>
       </div>  
-      <div class="footer">
+      <div class="footer" style="position: absolute;">
         <h2>Team 5</h2>
       </div>
     </body>
