--- a/src/views/plannedactivities.html
+++ b/src/views/plannedactivities.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    	<title> Materials Management </title>
+    	<title> Select Maintenance Activity </title>
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
     	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
       <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <style>
             a{
               text-decoration: none;
@@ -15,6 +17,14 @@
             }
             a:visited{
               color: black;
+            }
+            .btn{
+              background-color: #3bb0bb;
+              border-color:white; 
+            }
+            .row{
+                margin-left: 0px; 
+                margin-right: 0px;
             }
         </style>
     </head>
@@ -48,6 +58,7 @@
               <th>Type</th>
               <th>Estimated Intervention Time</th>
               <th style="text-align: center;"><h3>Select</h3></th>
+              <th style="text-align: center;"><h3>Edit</h3></th>
             </tr>
             <template id="activities-row-template">
             <tr>
@@ -57,7 +68,11 @@
               <td>{EstimatedTime}</td>
               <td style="text-align:center;">
                   <a href="selected.html" > <input type="button" onclick="passId();" value="select" name="select" style="margin: 10px; width: 100px; height: 50px;"></a>
-                  <a href="updateactivity.html"><input type="button" onclick="passId();" value="update" name="update" style="margin: 10px; width: 100px; height: 50px;"> </a>
+              </td>
+              <td style="text-align:center;">
+                <a href="updateactivity.html" onclick="passId();" class="btn btn-success btn-lg">
+                  <span class="glyphicon glyphicon-edit"></span>  
+                </a>
               </td>
             </tr>
             </template>
@@ -65,10 +80,11 @@
           <tbody id="activities-rows">
 
           </tbody>
-          <tr>
-            <td colspan="5" style="background-color: #7A858C; color: white;"><b><a href="addactivity.html">+ Add</a></b></td>
-          </tr>
         </table>
+        <br>
+        <a href="addactivity.html" class="btn btn-info btn-lg">
+              <span class="glyphicon glyphicon-plus-sign"></span> Add
+            </a>
       </div>
       <div class="footer">
         <h2>Team 5</h2>
