--- a/src/views/selected.html
+++ b/src/views/selected.html
@@ -168,7 +168,9 @@
 
         <!-- Custom JS -->
         <script type="text/javascript" src="../controllers/loader.js"></script>
-
+        <script type="application/javascript">
+          $(document).ready(loadSelected());
+        </script>
 
 
     </body>
