--- a/src/views/managedb.html
+++ b/src/views/managedb.html
@@ -36,9 +36,10 @@
             <a href="typology.html">Maintenance Typology</a>
             <a href="materials.html">Materials</a>
             <a href="procedures.html">Procedures</a>
+            <a style="float: right;" href="usermanagement.html">Users Management</a>
         </div>
         <div class="column">
-            <h1>Choose one management type from the top navigation bar to view, create, modify or delete it.</h1>
+            <h1>Select from the top navigation bar.</h1>
         </div>
             <div class="footer" style="position: absolute;">
                 <h2>Team 5</h2>
