--- a/src/views/adduser.html
+++ b/src/views/adduser.html
@@ -6,8 +6,10 @@
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
     	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-    	   <link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     	<style type="text/css">
 	    	a{
 	    		text-decoration: none;
@@ -22,7 +24,7 @@
     	<div class="row">
             <div class="header" >
                 <p>
-                  <a href="managedb.html"><img border="0" src="return.png" width="70" height="70"> </a>
+                  <a href="usermanagement.html"><img border="0" src="return.png" width="70" height="70"> </a>
                 </p>
             </div>
             <div class="header" >
@@ -38,53 +40,46 @@
     		<form class="modal-content" >
                 <h1>Create a new user</h1>
                 <fieldset>
-                <div class="container">
-                  <p>Fill in this form to create a new user.</p>
-                  <hr>
-                  <p>
-                  <label for="name"><b>Name: </b></label>
-                  <input type="text" placeholder="Enter Name" name="name" required>
-                  </p>
-                  <p>
-                  <label for="surname"><b>Last Name: </b></label>
-                  <input type="text" placeholder="Enter Last Name" name="lastname" required>
-                  </p>
-                  <p>
-                  <label for="email"><b>Email: </b></label>
-                  <input type="text" placeholder="Enter Email" name="email" required>
-                  </p>
-                  <p>
-                  <label for="psw"><b>Password: </b></label>
-                  <input type="password" placeholder="Enter Password" name="psw" required>
-                  </p>
-                  <p>
-                  <label for="role"><b>Role: </b></label>
-                  <select name="role" id="role">
-                    <option value="-">-</option>
-                    <option value="Planner">Planner</option>
-                    <option value="Maintainer">Maintainer</option>
-                </select>
-                </p>
-                <p>
-                  <label for="skill"><b>Skills: </b></label>
-                  <select name="skill" id="skill" multiple="">
-                    <option value="skill1">skill1</option>
-                    <option value="skill2">skill2</option>
-                </select>
-                </p>
-                  <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-                    <button type="submit" onclick="reload();" class="signupbtn">Save User</button>
-                </div>
+                    <div class="container">
+                      <p>Fill in this form to create a new user.</p>
+                      <hr>
+                      <p>
+                          <label for="name"><b>Name: </b></label>
+                          <input type="text" placeholder="Enter Name" name="name" required>
+                      </p>
+                      <p>
+                          <label for="surname"><b>Last Name: </b></label>
+                          <input type="text" placeholder="Enter Last Name" name="lastname" required>
+                      </p>
+                      <p>
+                          <label for="email"><b>Email: </b></label>
+                          <input type="text" placeholder="Enter Email" name="email" required>
+                      </p>
+                      <p>
+                          <label for="psw"><b>Password: </b></label>
+                          <input type="password" placeholder="Enter Password" name="psw" required>
+                      </p>
+                      <p>
+                          <label for="role"><b>Role: </b></label>
+                          <select name="role" id="role">
+                            <option value="-">-</option>
+                            <option value="Planner">Planner</option>
+                            <option value="Maintainer">Maintainer</option>
+                          </select>
+                      </p>
+                      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+                      <button type="submit" onclick="reload();">Save</button>
+                    </div>
                 </fieldset>
             </form>
     	</div>	
     	<div class="footer" style="position: absolute;">
-                <h2>Team 5</h2>
+            <h2>Team 5</h2>
         </div>
     </body>
     <script type="text/javascript">
         function reload(){
-            window.location.replace('managedb.html');
+            window.location.replace('usermanagement.html');
         }    
     </script>
 </html>    
