user update, save and load

--- a/src/views/addsite.html
+++ b/src/views/addsite.html
@@ -42,7 +42,7 @@
               <legend><h2>Add site</h2></legend>
               <p> 
                 <label for="factory">
-                  Factory: <input id = factory type="text" name="factory" required/>
+                  Factory: <input id = "factory" type="text" name="factory" required/>
                 </label>
               </p>
               <p> 
