--- a/src/views/adduser.html
+++ b/src/views/adduser.html
@@ -44,12 +44,12 @@
                       <p>Fill in this form to create a new user.</p>
                       <hr>
                       <p>
-                          <label for="name"><b>Name: </b></label>
-                          <input type="text" placeholder="Enter Name" name="name" required>
+                          <label for="name"><b>Username: </b></label>
+                          <input type="text" placeholder="Enter Name" name="username" required>
                       </p>
                       <p>
-                          <label for="surname"><b>Last Name: </b></label>
-                          <input type="text" placeholder="Enter Last Name" name="lastname" required>
+                          <label for="surname"><b>Name: </b></label>
+                          <input type="text" placeholder="Enter Last Name" name="name" required>
                       </p>
                       <p>
                           <label for="email"><b>Email: </b></label>
@@ -76,6 +76,12 @@
     	<div class="footer" style="position: absolute;">
             <h2>Team 5</h2>
         </div>
+
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+        <!-- Custom JS -->
+        <script type="text/javascript" src="../controllers/saver.js"></script>
     </body>
     <script type="text/javascript">
         function reload(){
