--- a/src/views/skillassignment.html
+++ b/src/views/skillassignment.html
@@ -56,6 +56,13 @@
       <div class="footer" style="position: absolute;">
         <h2>Team 5</h2>
       </div>
+
+      <!-- jQuery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+      <!-- Custom JS -->
+      <script type="text/javascript" src="../controllers/saver.js"></script>
+
     </body>
     <script type="text/javascript">
         function reload(){
