onclick button for skillassignment.html, updateuser.html and adduser.html

--- a/src/views/adduser.html
+++ b/src/views/adduser.html
@@ -68,7 +68,7 @@
                           </select>
                       </p>
                       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-                      <button type="submit" onclick="reload();">Save</button>
+                      <button onclick="addUser();">Save </button>
                     </div>
                 </fieldset>
             </form>
