--- a/src/views/updateuser.html
+++ b/src/views/updateuser.html
@@ -44,10 +44,10 @@
                 <input type="text" placeholder="Enter Email" name="email" required>
               </p>
               <p>
-                <label for="psw"><b>Change Password: </b></label>
+                <label for="psw"> <b>Change Password: </b> </label>
                 <input type="password" placeholder="Enter Password" name="psw" required>
               </p>
-              <button type="submit" onclick="reload();">Save</button>
+                <button onclick="updateUser()">Save</button>
             </div>
           </fieldset>
         </form>
