--- a/src/views/skillassignment.html
+++ b/src/views/skillassignment.html
@@ -48,7 +48,7 @@
                     <option value="skill2">skill2</option>
                   </select>
                 </p>
-                <button type="submit" onclick="reload();" class="signupbtn">Save</button>
+                <button onclick="assignSkill();">Save</button>
               </div>
             </fieldset>
         </form>
