--- a/src/views/adduser.html
+++ b/src/views/adduser.html
@@ -45,26 +45,26 @@
                       <hr>
                       <p>
                           <label for="name"><b>Username: </b></label>
-                          <input type="text" placeholder="Enter Name" name="username" required>
+                          <input id="username" type="text" placeholder="Enter Name" name="username" required>
                       </p>
                       <p>
                           <label for="surname"><b>Name: </b></label>
-                          <input type="text" placeholder="Enter Last Name" name="name" required>
+                          <input id="name" type="text" placeholder="Enter Last Name" name="name" required>
                       </p>
                       <p>
                           <label for="email"><b>Email: </b></label>
-                          <input type="text" placeholder="Enter Email" name="email" required>
+                          <input id="email" type="text" placeholder="Enter Email" name="email" required>
                       </p>
                       <p>
                           <label for="psw"><b>Password: </b></label>
-                          <input type="password" placeholder="Enter Password" name="psw" required>
+                          <input id="password" type="password" placeholder="Enter Password" name="psw" required>
                       </p>
                       <p>
                           <label for="role"><b>Role: </b></label>
-                          <select name="role" id="role">
+                          <select id="role" name="role" id="role">
                             <option value="-">-</option>
-                            <option value="Planner">Planner</option>
-                            <option value="Maintainer">Maintainer</option>
+                            <option value="planner">Planner</option>
+                            <option value="maintainer">Maintainer</option>
                           </select>
                       </p>
                       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
@@ -82,10 +82,10 @@
 
         <!-- Custom JS -->
         <script type="text/javascript" src="../controllers/saver.js"></script>
-    </body>
     <script type="text/javascript">
         function reload(){
             window.location.replace('usermanagement.html');
         }    
     </script>
+    </body>
 </html>    
