--- a/src/views/usermanagement.html
+++ b/src/views/usermanagement.html
@@ -49,7 +49,7 @@
           Role: <select onchange="showbutton()" id="role" name="role">
                   <option value="-">Choose a role</option>
                   <option value="planner">Planner</option>
-                  <option value="mantainer">Mantainer</option>
+                  <option value="maintainer">Mantainer</option>
           </select>
         </label>
     		<table id="users">
@@ -60,10 +60,7 @@
               <th style="text-align: center;"><h3>E-mail</h3></th>
               <th style="text-align: center;"><h3>Password</h3></th>
               <th style="text-align: center;"><h3>Edit</h3></th>
-              <td style="text-align:center;">
-                <a href="updateuser.html" onclick="passUsername();" class="btn btn-success btn-lg">
-                  <span class="glyphicon glyphicon-edit"></span>  
-                </a>
+
             </tr>
             <template id="users-row-template">
               <tr>
@@ -71,6 +68,11 @@
                 <td>{Name}</td>
                 <td>{Email}</td>
                 <td>{Password}</td>
+                  <td style="text-align:center;">
+                  <a href="updateuser.html" onclick="passUsername();" class="btn btn-success btn-lg">
+                      <span class="glyphicon glyphicon-edit"></span>
+                  </a>
+                  </td>
               </tr>
             </template>
           </thead>
@@ -97,8 +99,11 @@
         <!-- Custom JS -->
         <script type="text/javascript" src="../controllers/loader.js"></script>
 
-    </body>
     <script type="application/javascript">
+        $(document).ready(function(){
+            loadUsers();
+        });
+
       function passUsername() {
         $('#users').find('tr').click( function(){
           let username = document.getElementById("users").rows[$(this).index()+1].cells[0].innerHTML;
@@ -107,14 +112,17 @@
       };
 
       function showbutton(){
-        var x = document.getElementById("role").selectedIndex;
-        var y = document.getElementsByTagName("option")[x].value;
-        if(y=='mantainer'){
-          document.getElementById('buttonskill').style.display="inline";
-        }
-        else{
-          document.getElementById('buttonskill').style.display="none";
-        }
-      }
+          $("#users").find("tr:gt(0)").remove();
+          loadUsers();
+          var x = document.getElementById("role").selectedIndex;
+          var y = document.getElementsByTagName("option")[x].value;
+          if(y=='mantainer'){
+            document.getElementById('buttonskill').style.display="inline";
+          }
+          else{
+            document.getElementById('buttonskill').style.display="none";
+          }
+      };
     </script>
+    </body>
 </html>    
