--- a/src/views/selecthours.html
+++ b/src/views/selecthours.html
@@ -199,6 +199,8 @@
        <br>
        <br>
        <br>
+        <a href="#"a><input type="button" value="send" name="send" style="margin: 10px; width: 100px;
+            height: 50px;top: 0;"></a>
       <div class="footer">
         <h2>Team 5</h2>
       </div>
