--- a/src/views/choosemaintainer.html
+++ b/src/views/choosemaintainer.html
@@ -192,6 +192,12 @@
       <div class="footer">
         <h2>Team 5</h2>
       </div>
+
+       <!-- jQuery -->
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+       <!-- Custom JS -->
+       <script type="text/javascript" src="../controllers/loader.js"></script>
     </body>
 </html>
 
